--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@heroicons/react": "^2.1.3",
     "@mui/material": "^5.15.14",
     "@mui/material-nextjs": "^5.15.11",
+    "@vercel/postgres": "^0.7.2",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18"
