--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@vercel/postgres": "^0.7.2",
     "next": "14.1.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/node": "^20",
