--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@mui/material-nextjs": "^5.15.11",
     "@vercel/postgres": "^0.7.2",
     "axios": "^1.6.8",
+    "bcrypt": "^5.1.1",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "stripe": "^14.23.0",
+    "zod": "^3.22.4",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
