--- a/package.json
+++ b/package.json
@@ -18,11 +18,17 @@
     "@vercel/postgres": "^0.7.2",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "next": "14.1.4",
+    "nodemon": "^3.1.0",
+    "razorpay": "^2.9.3",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "stripe": "^14.23.0",
+    "sweetalert2": "^11.10.8",
     "zod": "^3.22.4",
     "zustand": "^4.5.2"
   },
