--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
+    "resend": "^3.2.0",
     "stripe": "^14.23.0",
     "sweetalert2": "^11.10.8",
     "zod": "^3.22.4",
