--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "commit" :"git add . && git commit -m"
   },
   "dependencies": {
     "@date-io/dayjs": "^3.0.0",
@@ -17,8 +18,6 @@
     "@mui/material": "^5.15.14",
     "@mui/material-nextjs": "^5.15.11",
     "@mui/x-date-pickers": "^7.3.2",
-    "@react-email/components": "^0.0.17",
-    "@react-email/render": "^0.0.13",
     "@vercel/postgres": "^0.7.2",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
@@ -31,7 +30,6 @@
     "razorpay": "^2.9.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-email": "^2.1.2",
     "react-hot-toast": "^2.4.1",
     "resend": "^3.2.0",
     "stripe": "^14.23.0",
