Appoinent Booking Mail Complete

--- a/.env
+++ b/.env
@@ -8,3 +8,5 @@ POSTGRES_USER="default"
 POSTGRES_HOST="ep-divine-voice-a16ni6zz-pooler.ap-southeast-1.aws.neon.tech"
 POSTGRES_PASSWORD="Xe0vqj4dZhof"
 POSTGRES_DATABASE="verceldb"
+SMTP_EMAIL="rachanasutra@gmail.com"
+SMTP_PASSWORD="zcmg tcje ypnl axmp"
