--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "commit" :"git add . && git commit -m"
+    "commit": "git add . && git commit -m"
   },
   "dependencies": {
     "@date-io/dayjs": "^3.0.0",
@@ -18,6 +18,7 @@
     "@mui/material": "^5.15.14",
     "@mui/material-nextjs": "^5.15.11",
     "@mui/x-date-pickers": "^7.3.2",
+    "@types/nodemailer": "^6.4.15",
     "@vercel/postgres": "^0.7.2",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
@@ -25,13 +26,14 @@
     "dayjs": "^1.11.11",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "handlebars": "^4.7.8",
     "next": "14.1.4",
+    "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0",
     "razorpay": "^2.9.3",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
-    "resend": "^3.2.0",
     "stripe": "^14.23.0",
     "sweetalert2": "^11.10.8",
     "zod": "^3.22.4",
