product data fetch from mongo

--- a/.env
+++ b/.env
@@ -10,3 +10,4 @@ POSTGRES_PASSWORD="Xe0vqj4dZhof"
 POSTGRES_DATABASE="verceldb"
 SMTP_EMAIL="rachanasutra@gmail.com"
 SMTP_PASSWORD="zcmg tcje ypnl axmp"
+MONGODB_URI="mongodb+srv://krupa:krupa110@cluster0.rcwae.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
