--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "handlebars": "^4.7.8",
+    "mongodb": "^6.9.0",
     "next": "14.1.4",
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0",
