--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.19.2",
     "handlebars": "^4.7.8",
     "mongodb": "^6.9.0",
+    "mongoose": "^8.7.2",
     "next": "14.1.4",
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0",
